	gates).

    PIG-94: M1 for streaming: maps and reduce side support with default
    (de)serializer (acmurthy via olgan)

    PIG-129: making sure that temp files are stored in task's home dir and
    cleaned up

    PIG-115: Removed Yahoo specific scripts/pig.pl, replaced with generic
    bash script bin/pig.  Moved startHOD.expect to bin (joa23 via gates).

	PIG-106:  Change StringBuffer and String '+' to StringBuilder (francisoud
	via gates).

    PIG-18: changes to make pig work with Hadoop 0.16 and HOD 0.4 (olgan)

	PIG-164:  Fix memory issue in SpillableMemoryManager to partially clean the list of
	bags each time a new bag is added rather than waiting until the garbage
	collector tells us we are out of memory (gates).

    PIG-154: moving parsing for DEFINE and STORE into QueryParser

    PIG-100: improved error handling

    PIG-94: changes for M2 of streaming: input/ouptut/ ship/cache error
    handling
	
	PIG-108: Fixed PigCombine to not do initialization on every call to 
	reduce, but instead only do it once in the call to configure.  (joa23 via
	gates).

    PIG-172: dealing with NULL error messages in exceptions (olgan)

    PIG-170: sort bags so that largest ones are released first

	PIG-122: Added build and src-gen to the list of ignore files in
	the top level directory (joa23 via gates).

    PIG-94: M3 code update for streaming (arunc via olgan)

	PIG-179: Changed PigRecordReader to be a static singleton rather than
	thread local.  (gates).
    
    PIG-55: added custom splitter (groves via olgan)

    PIG-174,180: bug fixes in streaming (arunc via olgan)

    PIG-181: streaming bug fixing (arunc via olgan)

    PIG-182: streaming bug fix (arunc via olgan)

    PIG-184: streaming bug fixes

	PIG-153: Incorrect result caused by dump in between statements (pi_song
	via gates).

    PIG-58: parameter substitution integration

	PIG-111: Reworked configuration to be setable via properties.
	(Contributions from joa23, pi_song, and oae via gates).